syntax = "proto3";

package restaurant;
import "order.proto";

option go_package = "github.com/tamirat-dejene/ha-soranu/shared/protos/restaurantpb;restaurantpb";

message Restaurant {
	string            restaurant_id = 1;
	string            email         = 2;
	string            name          = 3;
	float             latitude      = 4;
	float             longitude     = 5;
	repeated MenuItem menus         = 6;
}

message MenuItem {
	string item_id     = 1;
	string name        = 2;
	string description = 3;
	float  price       = 4;
}

// RestaurantService provides methods for restaurants to authenticate, manage menus, and handle orders.
service RestaurantService {
	// Login authenticates a restaurant using email and secret_key and returns the Restaurant record.
	rpc Login(RestaurantLoginRequest) returns (Restaurant);
	// RegisterRestaurant registers a new restaurant and returns the created Restaurant.
	rpc RegisterRestaurant(RegisterRestaurantRequest) returns (Restaurant);
	// GetRestaurant returns the Restaurant identified by restaurant_id.
	rpc GetRestaurant(GetRestaurantRequest) returns (Restaurant);
	// ListRestaurants streams restaurants within a radius of the given location.
	rpc ListRestaurants(ListRestaurantsRequest) returns (stream Restaurant);

	// AddMenuItem adds a new menu item to the specified restaurant and returns the created MenuItem.
	rpc AddMenuItem(AddMenuItemRequest) returns (MenuItem);
	// RemoveMenuItem removes a menu item from the specified restaurant and returns the removed MenuItem.
	rpc RemoveMenuItem(RemoveMenuItemRequest) returns (MenuItem);
	// UpdateMenuItem updates an existing menu item and returns the updated MenuItem.
	rpc UpdateMenuItem(UpdateMenuItemRequest) returns (MenuItem);

	// PlaceOrder places a new order for a restaurant and returns order details.
	rpc PlaceOrder(PlaceOrderRequest) returns (PlaceOrderResponse);
	// GetOrders returns all orders for a restaurant.
	rpc GetOrders(GetOrdersRequest) returns (GetOrdersResponse);
	// UpdateOrderStatus updates the status of an order and returns the updated Order.
	rpc UpdateOrderStatus(UpdateOrderStatusRequest) returns (Order);
	// ShipOrder marks an order as shipped and returns a shipping confirmation.
	rpc ShipOrder(ShipOrderRequest) returns (ShipOrderResponse);
	// GetOrder returns a single Order by order_id.
	rpc GetOrder(GetOrderRequest) returns (Order);
}

message RestaurantLoginRequest {
	string email      = 1;
	string secret_key = 2;
}

message RegisterRestaurantRequest {
	string                    email      = 1;
	string                    secret_key = 2; // Of the owner, for authentication purposes
	string                    name       = 3;
	float                     latitude   = 4;
	float                     longitude  = 5;
	repeated RegisterMenuItem menus      = 6;
}

message RegisterMenuItem {
	string name        = 1;
	string description = 2;
	float  price       = 3;
}

message GetRestaurantRequest {
	string restaurant_id = 1;
}

message ListRestaurantsRequest {
	float latitude  = 1;
	float longitude = 2;
	float radius_km = 3;
}

message AddMenuItemRequest {
	string restaurant_id = 1;
	string name          = 2;
	string description   = 3;
	float  price         = 4;
}

message RemoveMenuItemRequest {
	string restaurant_id = 1;
	string item_id       = 2;
}

message UpdateMenuItemRequest {
	string restaurant_id = 1;
	string item_id       = 2;
	string name          = 3;
	string description   = 4;
	float  price         = 5;
}

// Order related messages
message Order {
	string             order_id      = 1;
	string             customer_id   = 2;
	string             restaurant_id = 3;
	repeated OrderItem items         = 4;
	double             total_amount  = 5;
	order.OrderStatus  status        = 6;
}

message PlaceOrderRequest {
	string             customer_id   = 1;
	string             restaurant_id = 2;
	repeated OrderItem items         = 3;
}

message PlaceOrderResponse {
	string order_id     = 1;
	double total_amount = 2;
	string status       = 3;
}

message OrderItem {
	string item_id  = 1;
	int32  quantity = 2;
}

message GetOrdersRequest {
	string restaurant_id = 1;
}

message GetOrdersResponse {
	repeated Order orders = 1;
}

message UpdateOrderStatusRequest {
	string            restaurant_id = 1;
	string            order_id      = 2;
	order.OrderStatus new_status    = 3;
}

message ShipOrderRequest {
	string restaurant_id = 1;
	string order_id      = 2;
}

message ShipOrderResponse {
	string confirmation_message = 1;
	string driver_id            = 2;
}

message GetOrderRequest {
    string order_id = 1;
}